--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jyotish",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.15.5",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
@@ -17,9 +18,11 @@
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.19.1",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.18.0",
     "joi": "^17.12.2",
     "method-override": "^3.0.0",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
